--- a/app/src/main/res/layout/fragment_item_result.xml
+++ b/app/src/main/res/layout/fragment_item_result.xml
@@ -8,7 +8,8 @@
     android:layout_marginBottom="10dp"
     android:paddingBottom="8dp"
     android:paddingTop="3dp"
-    android:paddingRight="10dp">
+    android:paddingRight="10dp"
+    android:id="@+id/ly_activity" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_content"
+            android:id="@+id/ly_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -37,43 +38,38 @@
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:id="@+id/ly_answers"
-            android:layout_width="220dp"
-            android:layout_height="match_parent"
+            android:id="@+id/ly_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="left" >
+            <TextView
+                android:id="@+id/txt_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="13sp"
+                android:textColor="@color/mediumGrey"
+                android:layout_alignParentLeft="true"
+                android:paddingTop="2dp"
+                android:text="10 respuestas"
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/ly_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="right" >
             <com.github.curioustechizen.ago.RelativeTimeTextView
                 android:id="@+id/txt_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="11sp"
-                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 android:text="2016-01-30 13:45:30" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="right">
-            <ImageView
-                android:id="@+id/ic_user"
-                android:layout_width="19dp"
-                android:layout_height="19dp"
-                android:src="@drawable/ico_profile_grey"
-                android:layout_marginRight="5dp" />
-            <TextView
-                android:id="@+id/txt_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="13sp"
-                android:text="username"
-                android:paddingTop="2dp"
-                android:paddingBottom="4dp"
-                android:layout_toRightOf="@+id/ic_user"
-                android:textColor="@color/colorThird" />
         </RelativeLayout>
 
     </LinearLayout>
