--- a/app/src/main/res/layout/activity_new_preference.xml
+++ b/app/src/main/res/layout/activity_new_preference.xml
@@ -18,6 +18,7 @@
         android:paddingBottom="5dp"
         android:paddingTop="15dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:textColor="@color/colorPrimary"
         android:textSize="16dp"/>
 
@@ -48,7 +49,7 @@
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:id="@+id/check_babys"
@@ -79,6 +80,7 @@
                     android:checked="false"
                     android:buttonTint="#4cb6c4"
                     android:button="@drawable/color_check" />
+
             </TableRow>
 
             <!-- Temas -->
@@ -86,7 +88,7 @@
                 android:id="@+id/row_title_categories"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="10dp">
                 <TextView
                     android:id="@+id/title_categories"
                     android:text="Categorías"
@@ -99,7 +101,7 @@
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -120,7 +122,7 @@
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:id="@+id/check_comunicacion"
@@ -142,7 +144,7 @@
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -163,7 +165,7 @@
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:id="@+id/check_divorcio"
@@ -175,16 +177,16 @@
                     android:buttonTint="#4cb6c4"/>
                 <CheckBox
                     android:id="@+id/check_problemas_sociales"
-                    android:text="Problemas Sociales"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Problemas Sociales"
                     android:checked="false"
                     android:button="@drawable/color_check"
                     android:buttonTint="#4cb6c4" />
             </TableRow>
             <TableRow
                 android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_height="fill_parent">
                 <CheckBox
                     android:id="@+id/check_enfermedades"
@@ -218,64 +220,6 @@
 
             </TableRow>
 
-            <!-- Tipos de Padres -->
-            <TableRow
-                android:id="@+id/row_title_fathers"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="5dp">
-                <TextView
-                    android:id="@+id/title_fathers"
-                    android:text="Otras Categorías"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:padding="5dp"
-                    android:textColor="@color/mediumGrey"
-                    android:textSize="15dp"/>
-            </TableRow>
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
-                android:layout_height="fill_parent">
-                <CheckBox
-                    android:id="@+id/check_solteros"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Padres Solteros"
-                    android:checked="false"
-                    android:button="@drawable/color_check"
-                    android:buttonTint="#4cb6c4" />
-                <CheckBox
-                    android:id="@+id/check_primerizos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Padres Primerizos"
-                    android:checked="false"
-                    android:button="@drawable/color_check"
-                    android:buttonTint="#4cb6c4" />
-            </TableRow>
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_marginBottom="5dp"
-                android:layout_height="fill_parent">
-                <CheckBox
-                    android:id="@+id/check_futuros"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Futuros Papás"
-                    android:checked="false"
-                    android:button="@drawable/color_check"
-                    android:buttonTint="#4cb6c4" />
-                <CheckBox
-                    android:id="@+id/check_divorciados"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Padres Divorciados"
-                    android:checked="false"
-                    android:button="@drawable/color_check"
-                    android:buttonTint="#4cb6c4" />
-            </TableRow>
         </TableLayout>
 
     <!-- Continuar-->
