--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -16,10 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1">
-            <ImageButton
+            <ImageView
+                android:id="@+id/photoUser"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:background="@drawable/ico_profile_grey"
+                android:src="@drawable/ico_profile_grey"
                 android:layout_marginLeft="120dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.06" />
@@ -28,7 +29,7 @@
                 android:layout_height="24dp"
                 android:layout_marginTop="5dp"
                 android:background="@mipmap/ic_edit_simple_24"
-                android:onClick="editProfile"/>
+                android:id="@+id/uploadPhoto"/>
         </LinearLayout>
 
         <!-- Email Label -->
