--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -134,6 +134,7 @@
                     android:rating="1"
                     android:stepSize="0.1"
                     android:isIndicator="true"
+                    android:layout_marginTop="10dp"
                     style="?android:attr/ratingBarStyleIndicator" />
                 <TextView
                     android:id="@+id/txt_profile_rating"
