--- a/app/src/main/res/layout/activity_new_preference.xml
+++ b/app/src/main/res/layout/activity_new_preference.xml
@@ -4,10 +4,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <include
+    <!--<include
         android:id="@+id/toolbar_action"
         layout="@layout/toolbar_action">
-    </include>
+    </include>-->
+
     <!--Title -->
     <TextView
         android:id="@+id/title_preference"
